--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>FriendlyChat</title>
     <link type='text/css' href='./public/css/main.css'>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
+    <link href="https://fonts.googleapis.com/css2?family=Monda&display=swap" rel="stylesheet">
     <style>
         body {margin: 0; padding: 0;}
         h1 {text-align: center;}
